fixed execution headless test
# Conflicts:
#	clwb/tests/headlesstests/com/google/idea/blaze/clwb/LibCppTest.java